Generics_Extend_VariableArityMethod/Code1_error_report.txt
javac errors for Code1.java 
Code1.java:16: error: method toList in class Code1 cannot be applied to given types;
        List<String> strList = Code1.toList("a", "b", "c");
                                    ^
  required: T[]
  found: String,String,String
  reason: inferred type does not conform to upper bound(s)
    inferred: String
    upper bound(s): Number
  where T is a type-variable:
    T extends Number declared in method <T>toList(T...)
Note: Code1.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
 
========================= 
ExtendJ errors for Code1.java 
 
========================= 
Eclipse ECJ errors for Code1.java 
----------
1. WARNING in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Extend_VariableArityMethod\Code1.java (at line 5)
	public static <T extends Number> List<T> toList(T... arr) {
	                                                     ^^^
Type safety: Potential heap pollution via varargs parameter arr
----------
2. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Extend_VariableArityMethod\Code1.java (at line 16)
	List<String> strList = Code1.toList("a", "b", "c");
	                             ^^^^^^
The method toList(T...) in the type Code1 is not applicable for the arguments (String, String, String)
----------
2 problems (1 error, 1 warning)
